crates/language-v2/tests/src/fail/p0_parsing/duplicate_map_key/test.stderr
error: Duplicate map key.
  --> src/fail/p0_parsing/duplicate_map_key/test.rs:20:29
   |
20 | ...                   field_1 = Required(Baz),
   |                       ^^^^^^^
